fix pricing monthly api
